--- a/index.html
+++ b/index.html
@@ -1,110 +1,115 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wicklow Gold</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      background-color: #fefefe;
-      color: #333;
-    }
-    header {
-      background-color: #006400;
-      color: gold;
-      padding: 1em;
-      text-align: center;
-    }
-    header img {
-      height: 80px;
-    }
-    nav {
-      background-color: #004d00;
-      display: flex;
-      justify-content: center;
-      gap: 2em;
-      padding: 1em 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 2em;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .produtos {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 2em;
-    }
-    .produto {
-      text-align: center;
-      max-width: 250px;
-    }
-    .produto img {
-      max-width: 100%;
-      height: auto;
-    }
-    footer {
-      background-color: #006400;
-      color: gold;
-      text-align: center;
-      padding: 2em 1em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wicklow Gold</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background: linear-gradient(#e6f2d5, #fff7cc);
+            color: #333;
+        }
+        header {
+            background-color: #006400;
+            color: gold;
+            padding: 20px;
+            text-align: center;
+        }
+        header img {
+            width: 120px;
+        }
+        nav {
+            background-color: #228B22;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+        nav a {
+            color: gold;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            padding: 40px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+        h2 {
+            color: #006400;
+        }
+        .produtos {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .produto {
+            width: 250px;
+            margin: 20px;
+            text-align: center;
+        }
+        .produto img {
+            width: 100%;
+        }
+        footer {
+            background-color: #006400;
+            color: gold;
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Logo Wicklow Gold">
-    <h1>WICKLOW GOLD</h1>
-  </header>
-  <nav>
-    <a href="#quem-somos">Quem somos nós?</a>
-    <a href="#produtos">Nossos Produtos</a>
-    <a href="#vendas">Venda & Distribuição</a>
-  </nav>
+    <header>
+        <img src="logo.png" alt="Wicklow Gold Logo">
+        <h1>WICKLOW GOLD</h1>
+    </header>
 
-  <section id="quem-somos">
-    <h2>Quem somos nós?</h2>
-    <p>Sediada na charmosa cidade de Três Corações, em Minas Gerais, a WICKLOW GOLD LTDA nasce com o propósito de redefinir o conceito de cerveja artesanal no Brasil. Inspirada pela tradição irlandesa, a empresa cria uma experiência sensorial única onde cada gole conta uma história de qualidade, paixão e excelência.​</p>
-    <p>Na Wicklow Gold, a cerveja é mais do que uma bebida: é uma celebração. Utilizando ingredientes selecionados, maltes especiais e processos rigorosos de produção, nossas receitas unem inovação e tradição para entregar um produto final de altíssimo padrão. Cada rótulo é pensado para encantar paladares exigentes, que valorizam corpo, aroma e equilíbrio perfeito.​</p>
-    <p>Com uma linha de cervejas escuras e encorpadas, nossa marca se destaca não apenas pelo sabor marcante, mas também pelo design sofisticado e espírito lúdico que carrega o símbolo de um duende carismático, guardião do nosso segredo dourado: a arte de produzir uma cerveja premium incomparável.​</p>
-  </section>
+    <nav>
+        <a href="#quem-somos">Quem somos nós?</a>
+        <a href="#produtos">Nossos Produtos</a>
+        <a href="#vendas">Venda & Distribuição</a>
+    </nav>
 
-  <section id="produtos">
-    <h2>Nossos Produtos</h2>
-    <div class="produtos">
-      <div class="produto">
-        <img src="wicklow lager.png" alt="Wicklow Lager">
-        <h3>Wicklow Lager</h3>
-        <p>Uma lager artesanal de coloração dourada e brilho intenso. Refrescante, com sabor suave e levemente maltado, é perfeita para dias ensolarados e celebrações leves. Sua carbonatação equilibrada realça a pureza dos ingredientes e o frescor do lúpulo.</p>
-      </div>
-      <div class="produto">
-        <img src="Wicklow stout.png" alt="Wicklow Stout">
-        <h3>Wicklow Stout</h3>
-        <p>Escura, cremosa e intensa. A Wicklow Stout é uma verdadeira homenagem à tradição irlandesa. Com notas de café torrado, chocolate amargo e um amargor equilibrado, proporciona uma experiência rica e marcante para paladares exigentes.</p>
-      </div>
-      <div class="produto">
-        <img src="wicklow Red Ale.png" alt="Wicklow Red Ale">
-        <h3>Wicklow Red Ale</h3>
-        <p>De coloração avermelhada e corpo médio, a Red Ale da Wicklow Gold é envolvente e saborosa. Suas notas caramelizadas e levemente tostadas equilibram-se com um toque sutil de lúpulo, tornando-a ideal para momentos de descontração.</p>
-      </div>
-    </div>
-  </section>
+    <section id="quem-somos">
+        <h2>Quem somos nós?</h2>
+        <p>Sediada na charmosa cidade de Três Corações, em Minas Gerais, a WICKLOW GOLD LTDA nasce com o propósito de redefinir o conceito de cerveja artesanal no Brasil. Inspirada pela tradição irlandesa, a empresa cria uma experiência sensorial única onde cada gole conta uma história de qualidade, paixão e excelência.</p>
 
-  <section id="vendas">
-    <h2>Venda & Distribuição</h2>
-    <p>Estamos em expansão e buscamos parceiros para levar a Wicklow Gold a todo o Brasil. Se você é distribuidor, bar ou restaurante e deseja oferecer nossas cervejas, entre em contato pelo e-mail: <strong>vendas@wicklowgold.com</strong></p>
-  </section>
+        <p>Na Wicklow Gold, a cerveja é mais do que uma bebida: é uma celebração. Utilizando ingredientes selecionados, maltes especiais e processos rigorosos de produção, nossas receitas unem inovação e tradição para entregar um produto final de altíssimo padrão. Cada rótulo é pensado para encantar paladares exigentes, que valorizam corpo, aroma e equilíbrio perfeito.</p>
 
-  <footer>
-    <p>&copy; 2025 Wicklow Gold LTDA. Todos os direitos reservados.</p>
-  </footer>
+        <p>Com uma linha de cervejas escuras e encorpadas, nossa marca se destaca não apenas pelo sabor marcante, mas também pelo design sofisticado e espírito lúdico que carrega o símbolo de um duende carismático, guardião do nosso segredo dourado: a arte de produzir uma cerveja premium incomparável.</p>
+    </section>
+
+    <section id="produtos">
+        <h2>Nossos Produtos</h2>
+        <div class="produtos">
+            <div class="produto">
+                <img src="wicklow lager.png" alt="Wicklow Lager">
+                <h3>Wicklow Lager</h3>
+                <p>Refrescante e equilibrada, a Wicklow Lager traz a leveza dos lúpulos florais com o toque maltado perfeito para dias ensolarados. Uma cerveja dourada, com 5% de teor alcoólico, que proporciona uma experiência suave, ideal para acompanhar bons momentos.</p>
+            </div>
+            <div class="produto">
+                <img src="Wicklow stout.png" alt="Wicklow Stout">
+                <h3>Wicklow Stout</h3>
+                <p>Encorpada e intensa, a Wicklow Stout é uma homenagem à tradição das cervejas escuras irlandesas. Com 5,8% de teor alcoólico, ela entrega notas de café, chocolate amargo e um final seco, perfeito para quem aprecia sabores marcantes e profundos.</p>
+            </div>
+            <div class="produto">
+                <img src="wicklow Red Ale.png" alt="Wicklow Red Ale">
+                <h3>Wicklow Red Ale</h3>
+                <p>Com uma coloração avermelhada e sabor levemente adocicado, a Wicklow Red Ale encanta pelo equilíbrio entre malte e lúpulo. Possui 5% de teor alcoólico e é a escolha ideal para quem busca uma cerveja artesanal cheia de personalidade e sabor.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="vendas">
+        <h2>Venda & Distribuição</h2>
+        <p>Estamos em expansão e buscamos parceiros para levar a Wicklow Gold a todo o Brasil. Se você é distribuidor, bar ou restaurante e deseja oferecer nossas cervejas, entre em contato pelo e-mail: <strong>vendas@wicklowgold.com</strong></p>
+    </section>
+
+    <footer>
+        &copy; 2025 Wicklow Gold LTDA. Todos os direitos reservados.
+    </footer>
 </body>
 </html>
